<resources>
    <string name="app_name" translatable="false">CalculatorCopy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_1">number_1</string>
    <string name="number_2">number_2</string>
    <string name="add" translatable="false">Add</string>
    <string name="subtract" translatable="false">Subtract</string>
    <string name="multiply" translatable="false">Multiply</string>
    <string name="division" translatable="false">Division</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="history">HISTORY</string>
    <string name="back">Back</string>
    <string name="clear">clear</string>
</resources>